infra/kubernetes/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: psp
  labels:
    app.kubernetes.io/name: psp
