infra/kubernetes/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: psp-service
  namespace: psp
spec:
  selector:
    app: psp-service
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
